# NETW1

./: README.md
server/: Cargo.toml
server/src/: handlers.rs  main.rs
server/web/: index.html
