[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
chrono = "0.4"